--- a/plugins/CoreHome/stylesheets/dataTable/_dataTable.less
+++ b/plugins/CoreHome/stylesheets/dataTable/_dataTable.less
@@ -493,7 +493,7 @@ tr.level12 td.label {
 /* less right margins for the link image in the Pa*/
 .dataTableActions table.dataTable img.link {
   margin-right: 0.5em;
-  margin-left: 0;
+  margin-left: -1px;
   margin-bottom: 4px;
   vertical-align: text-bottom;
 }
